# BiliRoaming-Rust-Server

./: Cargo.toml  build.rs
.github/workflows/: ci.yml  release.yml  rust.yml
src/: mods.rs
src/docs/: dev.md
src/mods/grpc_api/: bilibili.metadata.device.rs  bilibili.metadata.restriction.rs  bilibili.metadata.rs  bilibili.pagination.rs  bilibili.pgc.gateway.player.v2.rs  bilibili.polymer.app.search.v1.rs  mod.rs  server.auth.v1.rs
src/protos/server/auth/v1/: auth.proto
